--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -52,7 +52,7 @@ jobs:
           ./scripts/feeds install -a
 
       - name: 生成配置文件
-        run: make defconfig
+        run: 
           rm -f ./.config*
           touch ./.config
           cat >> .config <<EOF
